--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>Crowfall Powers</title>
 </head>
 <body>
-    <div>
+    <div class="title">
         <h1>Assassin Class and Discipline Powers</h1>
-        <img src="images/Class/UI_ClassOutline_Assassin.png">        
+        <img src="images/Class/UI_ClassOutline_Assassin.png">     
+    </div>
         <h2>Available Races</h2>
-    </div>    
         <div class="race">
             <div>
                 <img src="images/Race/CF_Race_halfelf.png">
