small update to sizing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="title">
         <h1>Assassin Class and Discipline Powers</h1>
-        <img src="images/Class/UI_ClassOutline_Assassin.png">     
+        <img src="images/Class/UI_ClassOutline_Assassin.png" media=(max-width: 840px)>     
     </div>
         <h2>Available Races</h2>
         <div class="race">
