--- a/assassin.html
+++ b/assassin.html
@@ -10,126 +10,214 @@
     <title>Crowfall Powers</title>
 </head>
 <body>
-    <div class="title">
-        <h1>Assassin Class and Discipline Powers</h1>
-        <img src="images/Class/UI_ClassOutline_Assassin.png" media=(max-width: 840px)>     
+    <div class="class-info">
+        <div class="title">                       
+            <img src="images/Class/UI_ClassOutline_Assassin.png">                 
+        </div>
+            <div class="class-races">
+                <h2>Assassin</h2>
+            </div>
+                <div class="race">
+                    <div>
+                        <img src="images/Race/CF_Race_halfelf.png">
+                        <p>Half Elf</p>
+                    </div>            
+                    <div>
+                        <img src="images/Race/CF_Race_nethari.png">
+                        <p>Nethari</p>
+                    </div>
+                    <div>
+                        <img src="images/Race/CF_Race_fae.png">
+                        <p>Fae</p>
+                    </div>
+                    <div>
+                        <img src="images/Race/CF_Race_highelf.png">
+                        <p>High Elf</p>
+                    </div>
+                </div>
+    <div class="disc">        
+        <div>
+            <h2>Disciplines</h2>
+            <h3>Majors</h3>
+            Arcane Archer<br>
+            Fencer<br>
+            Marster of Daggers<br>
+            Master of Swords<br>
+            Sharpshooter<br>
+            Siege Engineer<br>
+            Waylayer<br>
+            <h3>Minors</h3>
+            Archery<br>
+            Careless Whisper<br>
+            Sparring<br>
+            Spirit Whip<br>
+            Thornshield 
+        </div>
     </div>
-        <h2>Available Races</h2>
-        <div class="race">
-            <div>
-                <img src="images/Race/CF_Race_halfelf.png">
-                <p>Half Elf</p>
-            </div>            
-            <div>
-                <img src="images/Race/CF_Race_nethari.png">
-                <p>Nethari</p>
-            </div>
-            <div>
-                <img src="images/Race/CF_Race_fae.png">
-                <p>Fae</p>
-            </div>
-            <div>
-                <img src="images/Race/CF_Race_highelf.png">
-                <p>High Elf</p>
-            </div>
+    <div class="prom">
+        <div>
+            <h2>Promotion</h2>
+            Blackguard<br><br><br><br>
+            Cutthroat<br><br><br><br>
+            Vandal
         </div>
-        
-    <div class="container">        
-        <div class="header">
-            <div>
-                <h2 id="ambush">Ambush</h2>            
-                <img src="images/Powers/Icon_Powers_Graphic_Assn_Ambush.png">
-            </div>
-            <div>
-                <h2 id="shadowmaster">Shadowmaster</h2>
-                <img src="images/Discipline/Major/Icon_Disc_Major_Shadowmaster.png">
-            </div>            
-        </div>
-        <div class="power-">
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                <p>9 sec</p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                <p></p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                <p>1</p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Target.png">
-                <p>Reticle</p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                <p></p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Cost.png">
-                <p></p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Range.png">
-                <p>6 mtr</p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Restore.png">
-                <p></p>
-            </div>
-        </div>     
-            <p class="info" class="p-header">Stealth:</p>
-            <p class="info">Attack from stealth: steps you from the shadows to deliver a lethal surprise attack causing 271 damage and generating 2 Pips. This attack gains a 100% Critical Strike modifier and generates an additional Pip when used against exposed targets.</p>        
     </div>
-    <div class="container">        
-        <div class="header">
-            <div>
-                <h2 id="ambush">Backstab</h2>            
-                <img src="images/Powers/Icon_Powers_Graphic_Assn_Backstab.png">
-            </div>
-            <div>
-                <h2 id=""></h2>
-                <img src="">
-            </div>            
+    <div class="dom">
+        <div>
+            <h2>Domain</h2>
+            Death  | Plague | War<br><br><br><br>
+            Death  | Plague | Shadow<br><br><br><br>
+            Plague | Shadow | Wind
         </div>
-        <div class="power-">
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                <p>6 sec</p>
+    </div>
+            
+    </div>
+    <section>   
+        <div class="container">        
+            <div class="header">
+                <div>
+                    <h2 id="ambush">Ambush</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Assn_Ambush.png">
+                </div>
+                <div>
+                    <h2 id="shadowmaster">Shadowmaster</h2>
+                    <img src="images/Discipline/Major/Icon_Disc_Major_Shadowmaster.png">
+                </div>            
             </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                <p></p>
+            <div class="power-">
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <p>9 sec</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <p>1</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <p>Reticle</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <p>6 mtr</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <p></p>
+                </div>
+            </div>     
+                <p class="info" class="p-header">Stealth:</p>
+                <p class="info">Attack from stealth: steps you from the shadows to deliver a lethal surprise attack causing 271 damage and generating 2 Pips. This attack gains a 100% Critical Strike modifier and generates an additional Pip when used against exposed targets.</p>        
+        </div>
+        <div class="container">        
+            <div class="header">
+                <div>
+                    <h2 id="ambush">Backstab</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Assn_Backstab.png">
+                </div>
+                <div>
+                    <h2 id=""></h2>
+                    <img src="">
+                </div>            
             </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                <p>1</p>
+            <div class="power-">
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <p>6 sec</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <p>1</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <p>Reticle</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <p>Instant</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <p>1 Pip</p>
+                </div>
+            </div>     
+                <p class="info" class="p-header">Stealth:</p>
+                <p class="info">Attack from stealth: steps you from the shadows to deliver a lethal surprise attack causing 271 damage and generating 2 Pips. This attack gains a 100% Critical Strike modifier and generates an additional Pip when used against exposed targets.</p>        
+        </div>
+        <div class="container">        
+            <div class="header">
+                <div>
+                    <h2 id="ambush">Backstab</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Assn_Backstab.png">
+                </div>
+                <div>
+                    <h2 id=""></h2>
+                    <img src="">
+                </div>            
             </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Target.png">
-                <p>Reticle</p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                <p>Instant</p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Cost.png">
-                <p></p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Range.png">
-                <p></p>
-            </div>
-            <div>
-                <img src="images/UI_PowerAttributeIcon_Restore.png">
-                <p>1 Pip</p>
-            </div>
-        </div>     
-            <p class="info" class="p-header">Stealth:</p>
-            <p class="info">Attack from stealth: steps you from the shadows to deliver a lethal surprise attack causing 271 damage and generating 2 Pips. This attack gains a 100% Critical Strike modifier and generates an additional Pip when used against exposed targets.</p>        
-    </div>       
+            <div class="power-">
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <p>6 sec</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <p>1</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <p>Reticle</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <p>Instant</p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <p></p>
+                </div>
+                <div>
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <p>1 Pip</p>
+                </div>
+            </div>     
+                <p class="info" class="p-header">Stealth:</p>
+                <p class="info">Attack from stealth: steps you from the shadows to deliver a lethal surprise attack causing 271 damage and generating 2 Pips. This attack gains a 100% Critical Strike modifier and generates an additional Pip when used against exposed targets.</p>        
+        </div>
+    </section>        
 </body>
 </html>
 
