--- a/assassin.html
+++ b/assassin.html
@@ -70,11 +70,11 @@
     <div class="prom">
         <div>
             <h2>Promotions and Domains</h2>            
-            <h3>Cutthroat</h3>
+            <h3><a href="#cutthroat">Cutthroat</a></h3>
             Death  | Plague | Shadow
-            <h3>Vandal</h3>
+            <h3><a href="#vandal">Vandal</a></h3>
             Plague | Shadow | Wind
-            <h3>Blackguard</h3>
+            <h3><a href="#blackguard">Blackguard</a></h3>
             Death  | Plague | War<br>
         </div>
     </div>    
@@ -730,7 +730,7 @@
                 </p>        
         </div>
     </section>
-    <h1>Promotion Class Cutthroat</h1>
+    <h1 id="cutthroat">Promotion Class Cutthroat</h1>
     <section>
         <div class="container">        
             <div class="header">
@@ -833,7 +833,7 @@
                 </p>        
         </div>
     </section>
-    <h1>Promotion Class Vandal</h1>
+    <h1 id="vandal">Promotion Class Vandal</h1>
     <section>   
         <div class="container">        
             <div class="header">
@@ -936,7 +936,7 @@
                 </p>        
         </div>
     </section>
-    <h1>Promotion Class Blackguard</h1>
+    <h1 id="blackguard">Promotion Class Blackguard</h1>
     <section>
         <div class="container">        
             <div class="header">
