all assasin class majors updated

--- a/assassin.html
+++ b/assassin.html
@@ -49,9 +49,9 @@
                 </div>
             </div>
     <div class="disc">        
-        <div>
+        <div class="disciplines">
             <h2>Disciplines</h2>
-            <h3>Majors</h3>
+            <h3><a href="#majors">Majors</a></h3>
             Arcane Archer<br>
             Fencer<br>
             Marster of Daggers<br>
@@ -59,7 +59,7 @@
             Sharpshooter<br>
             Siege Engineer<br>
             Waylayer<br>
-            <h3>Minors</h3>
+            <h3><a href="#minors">Minors</a></h3>
             Archery<br>
             Careless Whisper<br>
             Sparring<br>
@@ -1037,7 +1037,311 @@
                      and Poisons any Bleeding targets. This adds a 530 barrier to you when used.
                 </p>        
         </div>
-    </section>            
+    </section>
+    <h1>Disciplines</h1>
+    <h1 id="majors">Majors</h1>    
+    <section>
+        <div class="container-major">        
+            <div class="header">
+                <div>
+                    <h2 id="arcane-archer">Arcane Archer</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_ArcaneArcher.png">
+                </div>
+                <div>
+                    <h2 id="requirements">Requirements</h2>
+                    <p>Trait: Assassin, Myrmidon, Ranger</p>
+                    <p>Slot: Major</p>
+                    <h2 id="statistics">Statistics</h2>
+                    <p>Movement Speed Bonus: +5%</p>
+                    <p>Ranged Distance Bonus: +5(m)</p>
+                    <h2>Discipline</h2>
+                    <h6>Powers Granted</h6>
+                        <div>
+                            <h3>Arcane Arrow</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ArcaneShot_B.png">
+                            <p>Shoots an Arcane Arrow, dealing 103 damage to up to 5 enemies in its path
+                                and applies an elemental armor break to enemies in its path.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Arcane Barrier</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ArcaneBarrier.png">
+                            <p>Grants a Barrier that blocks 551 damage and reduces incoming Elemental damage by 80%.</p>
+                        </div>
+                    <h3>Traits Granted</h3>
+                    <p>Arrows<br>
+                    Elemental Arrows<br>
+                    Quiver Proficiency<br>
+                    Recurve Bow Proficiency<br>
+                    Speelbound Bow Proficiency
+                    </p>    
+                    <h3>Slots Granted</h3>
+                    <p>
+                        Ranged, Ammo
+                    </p>
+                    <h3>Power Trays Granted</h3>
+                    <p>
+                        Ranged Tray
+                    </p>
+                    <p class="info">
+                     The Arcane Archer is one of the most deadly mystical manipulators. Harnessing the power
+                     of the elements allows the archer fantastical powers that are feared by enemies and envied
+                     by other bow-users.
+                    </p>  
+                </div>                                            
+            </div>                                               
+        </div>
+        <div class="container-major">        
+            <div class="header">
+                <div>
+                    <h2 id="fencer">Fencer</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_Fencer.png">
+                </div>
+                <div>
+                    <h2 id="requirements">Requirements</h2>
+                    <p>Trait: Assassin, Ranger</p>
+                    <p>Slot: Major</p>
+                    <h2 id="statistics">Statistics</h2>
+                    <p>Armor Penetration: Piercing +2%</p>
+                    <p>Piercing Damage Bonus: +2%</p>
+                    <h2>Discipline</h2>
+                    <h6>Powers Granted</h6>
+                        <div>
+                            <h3>Cut and Thrust</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_CutAndThrust_A.png">
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_CutAndThrust_B.png">
+                            <p>Stabs an enemy for 195 damage, then stab again to pierce an enemy's Block or
+                                Parry. Stunning them and inflicting 195 damage. 
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Critical Dodge</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_CriticalDodge.png">
+                            <p>Reset one Dodge cooldown when hitting critically.<br><br>This effect can occur once
+                            per 30 seconds.</p>
+                        </div>
+                    <p class="info">
+                     Though there are many schools of blade mastery, the Fencer is one of the more unique styles of
+                     swordsmanship. With a focus on stabbing and forward thrusts, they are quick to find gaps in armor and even 
+                     quicker to dodge out of the way once the blow has been delivered. 
+                    </p>  
+                </div>                                            
+            </div>                                               
+        </div>
+        <div class="container-major">        
+            <div class="header">
+                <div>
+                    <h2 id="master-of-daggers">Master of Daggers</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_MasterOfDaggers.png">
+                </div>
+                <div>
+                    <h2 id="requirements">Requirements</h2>
+                    <p>Trait: Assassin</p>
+                    <p>Slot: Major</p>
+                    <h2 id="statistics">Statistics</h2>
+                    <p>Armor Penetration: Piercing +2%</p>
+                    <p>Piercing Damage Bonus: +2%</p>
+                    <h2>Discipline</h2>
+                    <h6>Powers Granted</h6>
+                        <div>
+                            <h3>Cripple</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_CripplingStab_A.png">
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_CripplingStab_B.png">
+                            <p>Attacks an enemy with two quick strikes causing 151 damage. On the second strike
+                                , if the target is poisoned their Attack Power is reduced by 20% for 15 seconds. 
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Shadows Linger</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ShadowsLinger.png">
+                            <p>Increases your Critical Damage by 25 for 6 seconds after being removed from Stealth.
+                             </p>
+                        </div>
+                    <p class="info">
+                     Daggers in the dark are a dangerous thing. The Masterd Of Daggers specialized their weapons training
+                     to focus completely on daggers and other small knives.
+                    </p>  
+                </div>
+            </div>    
+        </div>        
+            
+    <div class="container-major">        
+        <div class="header">
+            <div>
+                <h2 id="master-of-swords">Master of Swords</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_MasterOfDaggers.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Assassin, Knight, Ranger</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Slashing Damage Bonus: 2%</p>
+                <p>Slashing Resictance: +300</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                    <div>
+                        <h3>Critical Hack</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_CriticalHack_A.png">
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_CriticalHack_B.png">
+                        <p>Strikes an enemy twice for 193 damage each time. The second strike increases
+                            your Critical Strike and Critical Damage by 5% for 20 seconds. 
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Iron Skin</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_IronSkin.png">
+                        <p>Hardens your skin increasing your Slashing Resistance bt 2500, Crushing and Piercing
+                            Resistance by 1000 improving weapon efficiency by 20% and increasing your Power Damage
+                            : Melee by 6% for 30 seconds.
+                        </p>
+                    </div>
+                <p class="info">
+                    Though there are nearly countless schools of swordsmanship, the Master of Swords seeks to learn
+                    them all. Slashing and stabbing are their passion, and they spend their days practicing froms
+                    and blocks of all kinds.
+                </p>  
+            </div>
+        </div>    
+    </div>
+    <div class="container-major">        
+        <div class="header">
+            <div>
+                <h2 id="sharpshooter">Sharpshooter</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_Sharpshooter.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Assassin, Champion, Knight, Myrmidon, Ranger</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Movement Speed Damage Bonus: +5%</p>
+                <p>Ranged Distance Bonus: +5(m)</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                    <div>
+                        <h3>Binding Arrows</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_BindingArrows.png">                        
+                        <p>Pins down multiple enemies in an area Rooting them in place and causing 60 damage.
+                            <br><br>This power's Maximum Range cannot be modified. 
+                        </p>
+                    </div>
+                    <div>
+                        <h3>All Clear</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_AllClear.png">
+                        <p>Increases Damage Bonus by 10% when there are no enemies within 30m.
+                         </p>
+                    </div>
+                    <h3>Traits Granted</h3>
+                    <p>Arrows<br>
+                    Compound Bow Proficiency<br>
+                    Exotic Arrows<br>
+                    Quiver Proficiency<br>
+                    Recurve Bow Proficiency
+                    </p>    
+                    <h3>Slots Granted</h3>
+                    <p>
+                        Ranged, Ammo
+                    </p>
+                    <h3>Power Trays Granted</h3>
+                    <p>
+                        Ranged Tray
+                    </p>
+                <p class="info">
+                 Daggers in the dark are a dangerous thing. The Masterd Of Daggers specialized their weapons training
+                 to focus completely on daggers and other small knives.
+                </p>                  
+            </div>
+        </div>    
+    </div>
+    <div class="container-major">        
+        <div class="header">
+            <div>
+                <h2 id="siege-engineer">Siege Engineer</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_SiegeEngineer.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Eternal Crow</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Health: +500</p>
+                <p>Physical Resistance: +300</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                <div>
+                    <h3>Shield Siege Engine</h3>
+                    <img src="images/Powers/Icon_Powers_Mount_ShieldSiegeEngine.png">                        
+                    <p>Reduces damage taken by Siege Engines in the area by 90%. 
+                    </p>
+                </div>
+                <div>
+                    <h3>Bolster Siege Engine</h3>
+                    <img src="images/Powers/Icon_Powers_Mount_BolsterSiegeEngine.png">
+                    <p>Empowers a targeted Siege Engine adding 100% Damage Bonus.
+                    </p>
+                </div>
+                <div>
+                    <h3>Repair Siege Engine</h3>
+                    <img src="images/Powers/Icon_Powers_Mount_RepairSiegeEngine.png">
+                    <p>Repairs a targeted Siege Engine.
+                    </p>
+                </div>
+                <h3>Recipes Granted</h3>
+                <p>Ballista<br>
+                Catapult<br>
+                Trebuchet
+                </p>
+                <p class="info">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                </p>                                   
+            </div>
+        </div>    
+    </div>
+    <div class="container-major">        
+        <div class="header">
+            <div>
+                <h2 id="waylayer">Waylayer</h2>            
+                <img src="images/Discipline/Major/Icon_Disc_Major_Waylayer.png">
+            </div>
+            <div>
+                <h2 id="requirements">Requirements</h2>
+                <p>Trait: Assassin, Shadow</p>
+                <p>Slot: Major</p>
+                <h2 id="statistics">Statistics</h2>
+                <p>Movement Speed Stealth: +5%</p>
+                <p>Stealth: +15</p>
+                <h2>Discipline</h2>
+                <h6>Powers Granted</h6>
+                    <div>
+                        <h3>Cheap Shot</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Assn_CheapShot.png">                        
+                        <p>Waylays an enemy from stealth causing 151 damage, stunning them for 5 seconds,
+                            and generating Pips. This stun is unaffected by the target's Resolve or any Stun 
+                            duration reducing skills.  
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Study Target</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_ShadowsLinger.png">
+                        <p>Grants a Damage Bonus of 10 to abilities used in stealth and the first attack when
+                            exiting stealth against your target.
+                         </p>
+                    </div>                    
+                <p class="info">
+                 There are those who are stealthy, who walk unseen to the individuals around them, and then there
+                 are the Waylayers. These masters of reconnaissance can not only move through enemy ranks 
+                 undetected, but know how to gather the most pertinent information.
+                </p>                  
+            </div>
+        </div>    
+    </div>                                                                                                                                                               
+    </section>
+    <h1 id="minors">Minors</h1>            
 </body>
 </html>
 
