--- a/assassin.html
+++ b/assassin.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -82,7 +82,7 @@
         
             
     </div>
-    <h1>Class Powers</h1> 
+    <h1 class="sub-header">Class Powers</h1> 
     <section>            
         <div class="container">        
             <div class="header">
@@ -680,7 +680,7 @@
                 </p>        
         </div>
     </section>
-    <h1 id="cutthroat">Promotion Class Cutthroat</h1>
+    <h1 class="sub-header" id="cutthroat">Promotion Class Cutthroat</h1>
     <section>
         <div class="container">        
             <div class="header">
@@ -775,7 +775,7 @@
                 </p>        
         </div>
     </section>
-    <h1 id="vandal">Promotion Class Vandal</h1>
+    <h1 class="sub-header" id="vandal">Promotion Class Vandal</h1>
     <section>   
         <div class="container">        
             <div class="header">
@@ -870,7 +870,7 @@
                 </p>        
         </div>
     </section>
-    <h1 id="blackguard">Promotion Class Blackguard</h1>
+    <h1 class="sub-header" id="blackguard">Promotion Class Blackguard</h1>
     <section>
         <div class="container">        
             <div class="header">
@@ -964,8 +964,9 @@
                 </p>        
         </div>
     </section>
-    <h1>Disciplines</h1>
-    <h1 id="majors">Majors</h1>    
+    <h1 class="sub-header">Disciplines</h1>
+    <h1 class="sub-header" id="majors">Majors</h1>
+    <aside class="aside-majors">Majors</aside>    
     <section>
         <div class="container-major">        
             <div class="header">
@@ -1267,7 +1268,8 @@
         </div>    
     </div>                                                                                                                                                               
     </section>
-    <h1 id="minors">Minors</h1>
+    <h1 class="sub-header" id="minors">Minors</h1>
+    <aside class="aside-minors">Minors</aside>
     <section>
         <div class="container-major">        
             <div class="header">
@@ -1466,4 +1468,3 @@
     </section>            
 </body>
 </html>
-
