--- a/assassin.html
+++ b/assassin.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
     <title>Crowfall Powers Assassin</title>
 </head>
-<header>
+<nav>
     <ul>
         <li><a href="index.html">Index</a></li>
         <li><a href="assassin.html">Assassin</a></li>
@@ -22,7 +22,7 @@
         <li><a href="index.html">Knight</a></li>
         <li><a href="index.html">Myrmidon</a></li>
     </ul>
-</header>
+</nav>
 <body><h1>Assassin</h1>
     <div class="class-info">
         <div class="title">                       
