Update to llass links

--- a/assassin.html
+++ b/assassin.html
@@ -15,13 +15,15 @@
         <li><a href="index.html">Index</a></li>
         <li><a href="assassin.html">Assassin</a></li>
         <li><a href="champion.html">Champion</a></li>
-        <li><a href="index.html">Cleric</a></li>
-        <li><a href="index.html">Confessor</a></li>
-        <li><a href="index.html">Druid</a></li>
-        <li><a href="index.html">Duelist</a></li>
-        <li><a href="index.html">Frostweaver</a></li>
-        <li><a href="index.html">Knight</a></li>
-        <li><a href="index.html">Myrmidon</a></li>
+        <li><a href="cleric.html">Cleric</a></li>
+        <li><a href="confessor.html">Confessor</a></li>
+        <li><a href="druid.html">Druid</a></li>
+        <li><a href="duelist.html">Duelist</a></li>
+        <li><a href="frostweaver.html">Frostweaver</a></li>
+        <li><a href="knight.html">Knight</a></li>
+        <li><a href="myrmidon.html">Myrmidon</a></li>
+        <li><a href="ranger.html">Ranger</a></li>
+        <li><a href="templar.html">Templar</a></li>
     </ul>
 </nav>
 <body>
