--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
     <div class="index-class">
         <h1>Myrmidon</h1>
         <div><a href="myrmidon.html" target="_blank"><img src="images/Class/UI_ClassOutline_Myrmidon.png"></a></div>
-    </div>    
+    </div>
+    <div class="index-class">
+        <h1>Ranger</h1>
+        <div><a href="ranger.html" target="_blank"><img src="images/Class/UI_ClassOutline_Ranger.png"></a></div>
+    </div>
+    <div class="index-class">
+        <h1>Templar</h1>
+        <div><a href="templar.html" target="_blank"><img src="images/Class/UI_ClassOutline_Templar.png"></a></div>
+    </div>        
 </body>
 </html>
