--- a/knight.html
+++ b/knight.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles_class.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
-    <title>Crowfall Powers Champion</title>
+    <title>Crowfall Powers Knight</title>
 </head>
 
 <nav>
@@ -29,46 +29,57 @@
 <body>
     <div class="class-container">
         <div class="class-image"><img src="images/Class/UI_ClassOutline_Champion.png" width="250rem" height="250rem"></div>
-        <div class="class-name"><h1>Champion</h1></div>
+        <div class="class-name"><h1>Knight</h1></div>
         <div class="class-races"><h2>Available Races</h2></div>
         <div class="container-race-icons">    
             <div>
                 <img src="images/Race/CF_Race_centaur.png"><div>Centaur</div>
             </div>
             <div>
-                <img src="images/Race/CF_Race_halfgiant.png"><div>Half Giant</div>
+                <img src="images/Race/CF_Race_elkin.png"><div>Elken</div>
             </div>
             <div>
-                <img src="images/Race/CF_Race_minotaur.png"><div>Minotaur</div>
+                <img src="images/Race/CF_Race_fae.png"><div>Fae</div>
+            </div>
+            <div>
+                <img src="images/Race/CF_Race_guinecean.png"><div>Guinecean</div>
+            </div>
+            <div>
+                <img src="images/Race/CF_Race_highelf.png"><div>High Elf</div>
+            </div>
+            <div>
+                <img src="images/Race/CF_Race_human.png"><div>Human</div>
             </div>
             <div>
                 <img src="images/Race/CF_Race_stoneborn.png"><div>Stoneborn</div>
-            </div>        
+            </div>         
         </div>   
         <div class="class-disciplines"><h2>Class Disciplines</h2></div>
         <div class="class-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            Intimidator<br>
-            Reaver<br>
-            Runescarred Gladiator<br>            
+            Arcane Archer<br>
+            Fencer<br>
+            Marster of Daggers<br>
+            Master of Swords<br>
             Sharpshooter<br>
-            Siege Engineer<br>            
+            Siege Engineer<br>
+            Waylayer<br>
             <h3><a href="#minors">Minors</a></h3>
             Archery<br>
-            Furious<br>
-            Speady Retaliate<br>
-            Stay In The Fight<br>
+            Careless Whisper<br>
+            Sparring<br>
+            Spirit Whip<br>
             Thornshield 
         </div>
         
         <div class="class-promotion"><h2>Promotions</h2></div>
-        <div class="class-promotion-text1"><a href="#alpha-warrior">Alpha Warrior</a></div>
-        <div class="class-promotion-text2"><a href="#barbarian">Barbarian</a></div>
-        <div class="class-promotion-text3"><a href="#pit-fighter">Pit Fighter</a></div>
+        <div class="class-promotion-text1"><a href="#cutthroat">Cutthroat</a></div>
+        <div class="class-promotion-text2"><a href="#vandal">Vandal</a></div>
+        <div class="class-promotion-text3"><a href="#blackguard">Blackguard</a></div>
         <div class="class-domains"><h2>Domains</h2></div>
-        <div class="class-domains-text1">War<br>Battle<br>Justice</div>
-        <div class="class-domains-text2">Wind<br>Battle<br>War</div>
-        <div class="class-domains-text3">Music<br>Battle<br>Wind</div>
+        <div class="class-domains-text1">Death<br>Plague<br>Shadow</div>
+        <div class="class-domains-text2">Plague<br>Shadow<br>Wind</div>
+        <div class="class-domains-text3">Death<br>Plague<br>War</div>
     </div>
 
     <h1 class="sub-header" id="class-powers">Class Powers</h1>
@@ -77,14 +88,14 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Massive Cleave</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Chmp_MassiveCleave.png">
+                    <h2 id="backstab">Backstab</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Assn_Backstab.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>9 S</div>
+                    <div>6 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
@@ -92,7 +103,7 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div></div>
+                    <div>1</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
@@ -104,66 +115,16 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div>18 Rage</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div>5 M</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Restore.png">
                     <div></div>
-                </div>
-            </div>    
-                <p class="info">Strikes in front of you for 200 damage or 300 damage when activated with Dominance</p>        
-        </div>
-        <div class="container-class-powers">        
-            <div class="header-class-powers">
-                <div>
-                    <h2 id="backstab">Whirling Pain</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Chmp_WhirlingPain.png">
-                </div>                           
-            </div>
-            <div class="class-powers-cooldown-info">
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>24 S</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Sphere</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                    <div>Instant</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div>13 Rage</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Range.png">
                     <div></div>
                 </div>
                 <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div>5 M</div>
-                </div>
-                <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Restore.png">
-                    <div></div>
+                    <div>1 Pip</div>
                 </div>
             </div>    
-                <p class="info">Sweeps around you repeatedly dealing 91 damage per swing. This
-                    power automatically critically hits if you have a point of Dominance when used, this 
-                    consumes the point of Dominance.<br><br>You may move while spinning.          
-                </p>        
+                <p class="info">Stealth:<br>Attack from stealth: steps you from the shadows to deliver a lethal surprise attack causing 271 damage and generating 2 Pips. This attack gains a 100% Critical Strike modifier and generates an additional Pip when used against exposed targets.</p>        
         </div>
