update on champion powers

--- a/knight.html
+++ b/knight.html
@@ -77,9 +77,27 @@
         <div class="class-promotion-text2"><a href="#vandal">Vandal</a></div>
         <div class="class-promotion-text3"><a href="#blackguard">Blackguard</a></div>
         <div class="class-domains"><h2>Domains</h2></div>
-        <div class="class-domains-text1">Death<br>Plague<br>Shadow</div>
-        <div class="class-domains-text2">Plague<br>Shadow<br>Wind</div>
-        <div class="class-domains-text3">Death<br>Plague<br>War</div>
+        <div class="class-domains-text1">
+            <ul>
+                <li><a href="#">Death</a></li>
+                <li><a href="#">Plague</a></li>
+                <li><a href="#">Shadow</a></li>
+            </ul>
+        </div>    
+        <div class="class-domains-text2">
+            <ul>
+                <li><a href="#">Plague</a></li>
+                <li><a href="#">Shadow</a></li>
+                <li><a href="#">Wind</a></li>
+            </ul>
+        </div>             
+        <div class="class-domains-text3">
+            <ul>
+                <li><a href="#">Death</a></li>
+                <li><a href="#">Plague</a></li>
+                <li><a href="#">War</a></li>
+            </ul>
+        </div> 
     </div>
 
     <h1 class="sub-header" id="class-powers">Class Powers</h1>
