--- a/champion.html
+++ b/champion.html
@@ -95,7 +95,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Massive Cleave</h2>            
+                    <h2 id="massive-cleave">Massive Cleave</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_MassiveCleave.png">
                 </div>                           
             </div>
@@ -138,7 +138,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Whirling Pain</h2>            
+                    <h2 id="whirling-pain">Whirling Pain</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_WhirlingPain.png">
                 </div>                           
             </div>
@@ -188,7 +188,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Massive Cleave</h2>            
+                    <h2 id="massive-cleave">Massive Cleave</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_MassiveCleave.png">
                 </div>                           
             </div>
@@ -231,7 +231,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Viciuous Stomp</h2>            
+                    <h2 id="vicious-stomp">Vicious Stomp</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_ViciousStomp.png">
                 </div>                           
             </div>
@@ -280,7 +280,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Disamrming Shout</h2>            
+                    <h2 id="disarming-shout">Disamrming Shout</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_DisarmingShout.png">
                 </div>                           
             </div>
@@ -330,7 +330,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Rend</h2>            
+                    <h2 id="rend">Rend</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_Rend.png">
                 </div>                           
             </div>
@@ -380,7 +380,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Throw Hurlbat</h2>            
+                    <h2 id="throw-hurlbat"></h2>Throw Hurlbat</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_ThrowHurlbat.png">
                 </div>                           
             </div>
@@ -428,7 +428,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Demorolizing Shout</h2>            
+                    <h2 id="demorolizing-shout">Demorolizing Shout</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_DisarmingShout.png">
                 </div>                           
             </div>
@@ -477,7 +477,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Aegis of Destruction</h2>            
+                    <h2 id="aegis-of-destruction">Aegis of Destruction</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Myrm_ArcingSlash.png">
                 </div>                           
             </div>
@@ -525,7 +525,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Aegis of Salvation</h2>            
+                    <h2 id="aegis-of-salvation">Aegis of Salvation</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Disc_AegisOfSalvation_A.png">
                 </div>                           
             </div>
@@ -574,7 +574,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Insanity</h2>            
+                    <h2 id="insanity">Insanity</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Disc_Insanity.png">
                 </div>                           
             </div>
@@ -623,7 +623,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Blood Rage</h2>            
+                    <h2 id="blood-rage">Blood Rage</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Myrm_Gore.png">
                 </div>                           
             </div>
@@ -672,7 +672,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Fast Counter Attack</h2>            
+                    <h2 id="fast-counter-attack">Fast Counter Attack</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Disc_Cleave.png">
                 </div>                           
             </div>
@@ -720,7 +720,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Spinning Backfist</h2>            
+                    <h2 id="spinning-backfist">Spinning Backfist</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_SpinningBackFist.png">
                 </div>                           
             </div>
@@ -770,7 +770,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Kick Sand</h2>            
+                    <h2 id="kick-sand">Kick Sand</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_KickSand.png">
                 </div>                           
             </div>
@@ -819,7 +819,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Anger Management</h2>            
+                    <h2 id="anger-management">Anger Management</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Myrm_BattleRager.png">
                 </div>                           
             </div>
@@ -868,7 +868,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Dominator</h2>            
+                    <h2 id="dominator">Dominator</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Disc_Dominance.png">
                 </div>                           
             </div>
@@ -916,7 +916,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Second Wind</h2>            
+                    <h2 id="second-wind">Second Wind</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_Hateful.png">
                 </div>                           
             </div>
@@ -965,7 +965,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Leap</h2>            
+                    <h2 id="leap">Leap</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_Leap.png">
                 </div>                           
             </div>
@@ -1020,7 +1020,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Alpha Warrior</h2>            
+                    <h2 id="alpha-warrior">Alpha Warrior</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_AlphaWarrior.png">
                 </div>                           
             </div>
@@ -1069,7 +1069,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Mighty Warrior</h2>            
+                    <h2 id="mighty-warrior">Mighty Warrior</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_MightyWarrior.png">
                 </div>                           
             </div>
@@ -1124,7 +1124,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Barbarian</h2>            
+                    <h2 id="barbarian">Barbarian</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_Barbarian.png">
                 </div>                           
             </div>
@@ -1173,7 +1173,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Brutal Warrior</h2>            
+                    <h2 id="brutal-warrior">Brutal Warrior</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_BrutalWarrior.png">
                 </div>                           
             </div>
@@ -1230,7 +1230,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Pit Fighter</h2>            
+                    <h2 id="pit-fighter">Pit Fighter</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_PitFighter.png">
                 </div>                           
             </div>
@@ -1279,7 +1279,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Ultimate Warrior</h2>            
+                    <h2 id="ultimate-warrior">Ultimate Warrior</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_UltimateWarrior.png">
                 </div>                           
             </div>
@@ -1335,7 +1335,7 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="arcane-archer">Intimidator</h2>            
+                    <h2 id="intimidator">Intimidator</h2>            
                     <img src="images/Discipline/Major/Icon_Disc_Major_Intimidator.png">
                 </div>
                 <div>
@@ -1365,7 +1365,7 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="arcane-archer">Reaver</h2>            
+                    <h2 id="reaver">Reaver</h2>            
                     <img src="images/Discipline/Major/Icon_Disc_Major_Reaver.png">
                 </div>
                 <div>
@@ -1398,7 +1398,7 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="arcane-archer">Runescarred Gladiator</h2>            
+                    <h2 id="runescarred-gladiator">Runescarred Gladiator</h2>            
                     <img src="images/Discipline/Major/Icon_Disc_Major_ArcaneArcher.png">
                 </div>
                 <div>
@@ -1550,7 +1550,7 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="careless-whisper">Furious</h2>            
+                    <h2 id="furious">Furious</h2>            
                     <img src="images/Discipline/Minor/Icon_Disc_Minor_Furious.png">
                 </div>
                 <div>
@@ -1573,7 +1573,7 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="careless-whisper">Speedy Retaliate</h2>            
+                    <h2 id="speedy-retaliate">Speedy Retaliate</h2>            
                     <img src="images/Discipline/Minor/Icon_Disc_Minor_SpeedyRetaliate.png">
                 </div>
                 <div>
