--- a/confessor.html
+++ b/confessor.html
@@ -94,14 +94,14 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Backstab</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Assn_Backstab.png">
+                    <h2 id="backstab">Flash Of Light</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Cleric_FlashOfLight.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>6 S</div>
+                    <div>30 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>1</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
@@ -121,16 +121,61 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div></div>
+                    <div>90</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div></div>
+                    <div>20 M</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Restore.png">
-                    <div>1 Pip</div>
+                    <div></div>
                 </div>
             </div>    
-                <p class="info">Stealth:<br>Attack from stealth: steps you from the shadows to deliver a lethal surprise attack causing 271 damage and generating 2 Pips. This attack gains a 100% Critical Strike modifier and generates an additional Pip when used against exposed targets.</p>        
+                <p class="info">Manifests divine lght from your shield blinding your reticle target and inflicting
+                    151 damage.</p>        
+        </div>
+        <div class="container-class-powers">        
+            <div class="header-class-powers">
+                <div>
+                    <h2 id="backstab">Holy Symbol</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Cleric_HolySymbol.png">
+                </div>                           
+            </div>
+            <div class="class-powers-cooldown-info">
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <div>20 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <div>15</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <div>5</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <div>Area</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <div>Ground Aimed</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <div>90</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <div>20 M</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <div></div>
+                </div>
+            </div>    
+                <p class="info">Manifests divine lght from your shield blinding your reticle target and inflicting
+                    151 damage.</p>        
         </div>
